# regular-xmlpickler

./: .travis.yml  CHANGELOG  README.md  regular-xmlpickler.cabal
src/Generics/Regular/: XmlPickler.hs
src/Generics/Regular/XmlPickler/: Function.hs  Instances.hs
tests/: Main.hs
