name:                regular-xmlpickler
version:             0.2
description:         Generic generation of HXT XmlPickler instances using Regular.
synopsis:            Generic generation of HXT XmlPickler instances using Regular.
category:            XML, Data
cabal-version:       >= 1.6
author:              Silk
copyright:           (c) 2014, Silk
maintainer:          code@silk.co
homepage:            http://github.com/silkapp/regular-xmlpickler
license:             BSD3
license-file:        LICENSE
build-type:          Simple

extra-source-files:
  CHANGELOG
  LICENSE
  README.md

source-repository head
  type:              git
  location:          https://github.com/silkapp/regular-xmlpickler.git

library
  ghc-options:       -Wall
  hs-source-dirs:    src
  exposed-modules:
    Generics.Regular.XmlPickler
    Generics.Regular.XmlPickler.Function
    Generics.Regular.XmlPickler.Instances
  build-depends:
      base    == 4.*
    , hxt     >= 9.2 && < 9.4
    , regular >= 0.2 && < 0.4
    , text
