name:                regular-xmlpickler
version:             0.2
description:         Generic generation of HXT XmlPickler instances using Regular.
synopsis:            Generic generation of HXT XmlPickler instances using Regular.
category:            XML, Data
cabal-version:       >= 1.8
author:              Silk
copyright:           (c) 2014, Silk
maintainer:          code@silk.co
homepage:            http://github.com/silkapp/regular-xmlpickler
license:             BSD3
license-file:        LICENSE
build-type:          Simple

extra-source-files:
  CHANGELOG
  LICENSE
  README.md

source-repository head
  type:              git
  location:          https://github.com/silkapp/regular-xmlpickler.git

library
  ghc-options:       -Wall
  hs-source-dirs:    src
  exposed-modules:
    Generics.Regular.XmlPickler
    Generics.Regular.XmlPickler.Function
    Generics.Regular.XmlPickler.Instances
  build-depends:
      base == 4.*
    , hxt >= 9.2 && < 9.4
    , regular >= 0.2 && < 0.4
    , text

test-suite tests
  ghc-options:       -Wall
  hs-source-dirs:    tests
  main-is:           Main.hs
  type:              exitcode-stdio-1.0
  build-depends:
      base >= 4.4 && < 5
    , hxt >= 9.2 && < 9.4
    , hxt-pickle-utils == 0.1.*
    , regular >= 0.2 && < 0.4
    , regular-xmlpickler
    , tasty == 0.10.*
    , tasty-hunit == 0.9.*
    , tasty-th == 0.1.*
